manifests/kube_service.yml
apiVersion: v1
kind: Service
metadata:
  name: "hello-world-service"
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  #type: LoadBalancer
  type: NodePort
  ports:
  # the port that this service should serve on
  - name: hello-world-service
    port: 8070
  selector:
    app: "hello-world-service-selector"
